# limpid

./: .gitignore  Cargo.toml  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md
kitchensink/: Cargo.toml
kitchensink/ks-debug/: Cargo.toml
kitchensink/ks-debug/src/: lib.rs
kitchensink/ks-facet/: Cargo.toml
kitchensink/ks-facet-json-read/: Cargo.toml
kitchensink/ks-facet-json-read/src/: lib.rs
kitchensink/ks-facet-json-write/: Cargo.toml
kitchensink/ks-facet-json-write/src/: lib.rs
kitchensink/ks-facet-pretty/: Cargo.toml
kitchensink/ks-facet-pretty/src/: lib.rs
kitchensink/ks-facet/src/: main.rs
kitchensink/ks-mock/: Cargo.toml
kitchensink/ks-mock/src/: lib.rs
kitchensink/ks-serde/: Cargo.toml
kitchensink/ks-serde-json-read/: Cargo.toml
kitchensink/ks-serde-json-read/src/: lib.rs
kitchensink/ks-serde-json-write/: Cargo.toml
kitchensink/ks-serde-json-write/src/: lib.rs
kitchensink/ks-serde/src/: main.rs
kitchensink/ks-types/: Cargo.toml
kitchensink/ks-types/src/: lib.rs  unused.rs
limpid/: Cargo.toml
limpid/src/: cli.rs  debug_report.rs  facet_specific.rs  git.rs  main.rs  main_old.rs  report.rs
