[package]
name = "ks-types"
version = "0.1.0"
edition = "2024"

[features]
facet = ["dep:facet"]
serde = ["dep:serde", "uuid/serde", "chrono/serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

facet = { workspace = true, features = ["chrono", "uuid"], optional = true }

# others
chrono = { version = "0.4.41", features = [] }
uuid = { version = "1.17.0", features = ["v4"] }
